--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
 			</div>
 			
 			<div class="copyrights seven columns">
-				<span>&copy; 2016 Growth &amp; Cultural, All Rights Reserved</span>
+				<span>&copy; 2016 Cultural Growth, All Rights Reserved</span>
 			</div>
 		</div>
 	</footer>
