--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
 					<h5>Contact Information</h5>
 				
 					<p class="white"><img src="images/smlsquare.png" alt="" /> (347)-828-1699</p>
-					<p class="white"><img src="images/smlsquare.png" alt="" /><a href="mailto:integreathub@gmail.com" style="color:white;"> doreami93@gmail.com</a></p>
+					<p class="white"><img src="images/smlsquare.png" alt="" /><a href="mailto:integreathub@gmail.com" style="color:white;"> integreathub@gmail.com</a></p>
 					<p class="white"><img src="images/smlsquare.png" alt="" /> Boston <br /><span class="locate"> Massachussets, USA</span></p>
 				</div> <!-- end contact-info -->
 
