--- a/index.html
+++ b/index.html
@@ -106,8 +106,8 @@
 					<section id="anime-icon">
 						<div id="Stage" class="ghost-ash-icon-01"></div>
 					</section>
-					<h3>Immerse yourself into the culture </h3>
-					<p>Making local friends will not only enhance your english level, but also open the door to a deeper understanding of the culture. Be part of this epic experience!</p>
+					<h3>Immerse into the culture </h3>
+					<p>Making local friends will not only enhance your english level, but also give you access to a deeper understanding of the culture. Be part of this epic experience!</p>
 				</div>
 				
 				<div class="one-third column">
@@ -115,7 +115,7 @@
 						<div id="Stage" class="ghost-ash-icon-02"></div>
 					</section>
 					<h3>Guided cultural adaptation</h3>
-					<p>Cultural differences might prevent you from making local friends. This program will help you breach limiting beliefs and bridge the cultural gap.</p>
+					<p>Cultural barrier can give you difficulties adapting in a new environment. This program will help you bridge the cultural gap.</p>
 				</div>
 				
 				<div class="one-third column">
@@ -124,7 +124,7 @@
 					</section>
 					<h3>Gain valuable soft skills</h3>
 
-					<p>In nowadays society, EQ is often more valued than IQ. This program will help you enhance your soft skills and give you a better chance to succeed in finding a job in the market.</p>
+					<p>In nowadays society, EQ is often more valued than IQ. This program will enhance your networking skills and give you a better chance to succeed in finding a job in the US market.</p>
 				</div>
 			</div>
 		</div> <!-- end facts-list -->
