--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 						<div id="Stage" class="ghost-ash-icon-02"></div>
 					</section>
 					<h3>Guided cultural adaptation</h3>
-					<p>Cultural barrier can give you difficulties adapting in a new environment. This program will help you bridge the cultural gap.</p>
+					<p>Cultural barrier often prevent internationals from adapting to the culture. This program will help you bridge the cultural gap.</p>
 				</div>
 				
 				<div class="one-third column">
@@ -124,7 +124,7 @@
 					</section>
 					<h3>Gain valuable soft skills</h3>
 
-					<p>In nowadays society, EQ is often more valued than IQ. This program will enhance your networking skills and give you a better chance to succeed in finding a job in the US market.</p>
+					<p>In nowadays society, EQ is often more valued than IQ. This program will enhance your networking skills and give you a better chance of success in finding a job in the US market.</p>
 				</div>
 			</div>
 		</div> <!-- end facts-list -->
