--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 						<div id="Stage" class="ghost-ash-icon-02"></div>
 					</section>
 					<h3>Guided cultural adaptation</h3>
-					<p>Cultural barrier often prevent internationals from adapting to the culture. This program will help you bridge the cultural gap.</p>
+					<p>Cultural barrier often prevents internationals from communicating and adapting to the culture. This program will help you bridge the cultural gap.</p>
 				</div>
 				
 				<div class="one-third column">
