--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 					<section id="anime-icon">
 						<div id="Stage" class="ghost-ash-icon-01"></div>
 					</section>
-					<h3>Immerse into the culture </h3>
+					<h3>Immerse Into The Culture </h3>
 					<p>Making local friends will not only enhance your English, but also give you access to a deeper understanding of the culture. Be part of this epic experience!</p>
 				</div>
 				
@@ -114,7 +114,7 @@
 					<section id="anime-icon">
 						<div id="Stage" class="ghost-ash-icon-02"></div>
 					</section>
-					<h3>Guided cultural adaptation</h3>
+					<h3>Accelerated Cultural Adaptation</h3>
 					<p>Cultural barriers often prevent internationals from adapting to the American culture. This program will help you bridge the cultural gap.</p>
 				</div>
 				
@@ -122,7 +122,7 @@
 					<section id="anime-icon">
 						<div id="Stage" class="ghost-ash-icon-03"></div>
 					</section>
-					<h3>Gain valuable soft skills</h3>
+					<h3>Gain Valuable Soft Skills</h3>
 
 					<p>Do you know that EQ is often more valued than IQ in the American society? This program will enhance your networking skills and give you a better chance of success in finding a job in the US.</p>
 				</div>
