--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 						<div id="Stage" class="ghost-ash-icon-02"></div>
 					</section>
 					<h3>Accelerated Cultural Adaptation</h3>
-					<p>Cultural barriers often prevent internationals from adapting to the American culture. This program will help you bridge the cultural gap.</p>
+					<p>Cultural barriers often prevent internationals from communicating with locals and adapting to the American culture. This program will help you bridge the cultural gap.</p>
 				</div>
 				
 				<div class="one-third column">
