--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 					</section>
 					<h3>Gain Valuable Soft Skills</h3>
 
-					<p>Do you know that EQ is often more valued than IQ in the American society? This program will enhance your networking skills and give you a better chance of success in finding a job in the US.</p>
+					<p>Do you know that EQ is often more valued than IQ in the American society? This program will enhance your networking skills and give you a better chance of success in finding jobs in the US.</p>
 				</div>
 			</div>
 		</div> <!-- end facts-list -->
