--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 				<div class="clear"></div>
 				
 				<div class="nine columns descript">
-					<p>We believe that making local friends is the first step of adapting to the American culture. This program has been designed for internationals in order to provide them a step-by-step guide. InteGreat Hub will help you connect with locals and integrate the US culture by teaching conversation skills and breaching limiting beliefs. </p>
+					<p>We believe making local friends is the first step of adapting to the American culture. This program has been designed for internationals in order to provide them a step-by-step guide. InteGreat Hub will help you connect with locals and integrate the US culture by breaching your limiting beliefs and giving you key conversation skills. </p>
 				</div>
 				
 				<div class="seven columns paperbtn">
